--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "doctrine/dbal": "~2.3",
         "guzzlehttp/guzzle": "^7.2",
+        "infyomlabs/adminlte-templates": "^6.0",
+        "infyomlabs/laravel-generator": "^6.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "infyomlabs/laravel-generator": "^6.0",
-        "infyomlabs/adminlte-templates": "^6.0"
+        "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
